[gd_scene load_steps=8 format=3 uid="uid://07lsd5homy0c"]

[ext_resource type="PackedScene" uid="uid://k4mqq30trw33" path="res://testmap2.tscn" id="1_8epev"]
[ext_resource type="Script" path="res://door_camera_2.gd" id="1_hqv0b"]
[ext_resource type="Shader" path="res://screenshake.gdshader" id="3_5k7sy"]
[ext_resource type="Shader" path="res://greenflash.gdshader" id="3_r2ipu"]
[ext_resource type="Theme" uid="uid://c232tbd0pwa2b" path="res://Labels.tres" id="4_111lw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b61lp"]
shader = ExtResource("3_5k7sy")
shader_parameter/ShakeStrength = 0.0
shader_parameter/FactorA = Vector2(100, 100)
shader_parameter/FactorB = Vector2(1, 1)
shader_parameter/magnitude = Vector2(0.01, 0.01)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_txyro"]
shader = ExtResource("3_r2ipu")
shader_parameter/Switch = 0.0

[node name="DoorCamera2" type="Node2D" groups=["goal"]]
script = ExtResource("1_hqv0b")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_right = 1152.0
offset_bottom = 648.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 0

[node name="Node2D" parent="CanvasLayer/Panel/HBoxContainer" instance=ExtResource("1_8epev")]
position = Vector2(326, 74)

[node name="Red Flash" type="ColorRect" parent="CanvasLayer"]
z_index = 6
material = SubResource("ShaderMaterial_b61lp")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Green Flash" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_txyro")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timeleft" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -562.0
offset_top = -320.0
offset_right = -168.0
offset_bottom = -210.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_111lw")
theme_override_font_sizes/font_size = 50
text = "Time Up!"
horizontal_alignment = 1

[node name="timeup" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -55.0
offset_right = 197.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_111lw")
text = "Time Up!"
horizontal_alignment = 1

[node name="success" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -55.0
offset_right = 197.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_111lw")
text = "Complete!"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="failed" from="." to="." method="_on_failed"]
[connection signal="success" from="." to="." method="_on_success"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
